Project and authentication management

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -29,6 +29,8 @@
         }
 
         $(document).ready(function(e) {
+            sessionStorage.clear();
+
             $("#loginForm").submit(function (event) {
                 event.preventDefault();
 
