Tried to fix links. Not working...

--- a/src/public/Style/css.css
+++ b/src/public/Style/css.css
@@ -411,3 +411,11 @@ section {
 #totalTeams{
     width:50px;
 }
+
+#Projects{
+    position:relative;
+}
+
+.projLink{
+    text-decoration: none;
+}
