--- a/src/views/projectSetup.html
+++ b/src/views/projectSetup.html
@@ -54,10 +54,9 @@
                         var displayProjects = "";
                         for(var i = 0; i < dat.length; i++)
                         {
-                            displayProjects += '<p><a class="projLink" href="#">'+dat[i].projectName+'</a></p>';
+                            displayProjects += '<div><a class="projLink" href="fb.com">'+dat[i].projectName+'</a></div><br/>';
                         }
                         $("#Projects").html(displayProjects);
-                        $(".projLink").css("text-decoration" , "none" );
 
                     },
 
@@ -83,10 +82,11 @@
 
 <div class="main">
 
+    <div id="Projects" class="loader"></div>
     <div class="background">
         <img src="../Images/Storm.png" style="width: 100%;top:auto;">
     </div>
-    <div id="Projects" class="loader"></div>
+
     <div class="aboutWrapper">
         <div class="aboutUsText">
 
