--- a/src/views/projectSetup.html
+++ b/src/views/projectSetup.html
@@ -54,7 +54,7 @@
                         var displayProjects = "";
                         for(var i = 0; i < dat.length; i++)
                         {
-                            displayProjects += '<div><a class="projLink" href="fb.com">'+dat[i].projectName+'</a></div><br/>';
+                            displayProjects += '<div><a class="projLink" href="#">'+dat[i].projectName+'</a></div><br/>';
                         }
                         $("#Projects").html(displayProjects);
 
@@ -85,7 +85,10 @@
     <div class="background">
         <img src="../Images/Storm.png" style="width: 100%;top:auto;">
     </div>
-    <div id="Projects" class="loader"></div>
+    <div id="Projects" class="loader">
+        <div id="ProjectsHead"><p id="projectHeadTxt">My Projects</p></div>
+    </div>
+    <div id="AddProjects" ><img id="AddProjectsImg" src="images/plus_button.png" height="100px"><br/>Add Projects</div>
 
 
 </div>
