--- a/src/views/projectSetup.html
+++ b/src/views/projectSetup.html
@@ -12,8 +12,14 @@
 
     <script>
 
+
+
         $(document).ready(function(e) {
 
+            $("#AddProjectsImg").hover(
+                    function(){$(this).animate({width: 150, height:150}, 500);},
+                    function(){$(this).animate({width: 100, height:100}, 300);}
+            );
 
             if (sessionStorage.length == 0) // no user logged on.
             {
@@ -88,6 +94,7 @@
     <div id="Projects" class="loader">
         <div id="ProjectsHead"><p id="projectHeadTxt">My Projects</p></div>
     </div>
+
     <div id="AddProjects" ><img id="AddProjectsImg" src="images/plus_button.png" height="100px"><br/>Add Projects</div>
 
 
