Started with the shuffling JS

--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -37,6 +37,7 @@
             </div>
 
             <button name="Randomize" id="randomize">Randomize</button>
+            <button name="Shuffle By" id="shuffleBy">Shuffle Teams By</button>
 
             <div class="teams">
 
