Working on Shuffling.js

--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style/css.css">
 
     <script src="scripts/algorithm.js"></script>
+    <script src="scripts/shuffling.js"></script>
 </head>
 <body>
     <div class="header">
@@ -37,7 +38,7 @@
             </div>
 
             <button name="Randomize" id="randomize">Randomize</button>
-            <button name="Shuffle By" id="shuffleBy">Shuffle Teams By</button>
+            <button name="Shuffle By" id="shuffle">Shuffle Teams By</button>
 
             <div class="teams">
 
