Added check for active projects

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -124,7 +124,7 @@
                     $.ajax({
                         type: "POST",
                         url: '/signUp',
-                        data: {name: name, username: user, password: pass, projectID: "[]", email: email},
+                        data: {name: name, username: user, password: pass, projectID: [], email: email},
                         dataType: "json",
                         success: function (dat, testStatus) {
 
