--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -40,8 +40,8 @@
             <button name="Randomize" id="randomize">Randomize</button>
             <button name="Shuffle By" id="shuffle">Shuffle Teams By</button><br>
 
-            <input type="radio" name="shuffleS" value="0" checked> Diverse
-            <input type="radio" name="shuffleS" value="1" > Similar
+            <input type="radio" name="shuffleRad" value="0" checked> Diverse
+            <input type="radio" name="shuffleRad" value="1" > Similar
 
             <div class="teams">
 
