--- a/src/views/index.html
+++ b/src/views/index.html
@@ -169,6 +169,7 @@
 
             });
 
+            $( "input[type=submit], a, button, input[type=file]" ).button();
         });
         /**
         $.ajax({
