Fixed routing for Client meeting

--- a/src/views/projectSetup.html
+++ b/src/views/projectSetup.html
@@ -145,7 +145,7 @@
                             var displayProjects = "";
 
                             for (var i = 0; i < dat.length; i++) {
-                                displayProjects += '<div><a class="projLink" href="#">' + dat[i].projectName + '</a></div><br/>';
+                                displayProjects += '<div><a class="projLink" href="/teamsetup">' + dat[i].projectName + '</a></div><br/>';
                             }
                             $("#Projects").html(displayProjects);
 
