array of user objects onload

--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -14,6 +14,12 @@
     <script src="scripts/algorithm.js"></script>
     <script src="scripts/shuffling.js"></script>
 </head>
+<p hidden="true" id="jsondat"><%-JSON.stringify(subjects);%></p>
+<script>$(document).ready(function(e){
+    //array van subject objects
+    var subjects = JSON.parse($('#jsondat').text());
+
+});</script>
 <body>
     <div class="header">
         <h2 class="headerMessages">Team Setup</h2>
