--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -15,11 +15,11 @@
     <script src="scripts/shuffling.js"></script>
 </head>
 <p hidden="true" id="jsondat"><%-JSON.stringify(subjects);%></p>
-<script>$(document).ready(function(e){
+<!--<script>$(document).ready(function(e){
     //array van subject objects
     var subjects = JSON.parse($('#jsondat').text());
 
-});</script>
+});</script>-->
 <body>
     <div class="header">
         <h2 class="headerMessages">Team Setup</h2>
