--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -15,11 +15,15 @@
     <script src="scripts/shuffling.js"></script>
 </head>
 <p hidden="true" id="jsondat"><%-JSON.stringify(subjects);%></p>
-<!--<script>$(document).ready(function(e){
+<script>$(document).ready(function(e){
     //array van subject objects
     var subjects = JSON.parse($('#jsondat').text());
+    for(var i = 0; i < subjects.length; i++)
+    {
+        $('#subjects').append('<div class="subject" id="' + subjects[i].id + '" draggable="true" ondragstart="drag(event)">' + subjects[i].name + '</div');
+    }
 
-});</script>-->
+});</script>
 <body>
     <div class="header">
         <h2 class="headerMessages">Team Setup</h2>
@@ -31,9 +35,9 @@
             <div class="members">
                 <p style="font-size: large">Spawn Pool</p>
                 <div id="subjects" class="names" ondrop="drop(event)" ondragover="allowDrop(event)">
-                    <%for(var i = 0; i < subjects.length; i++){%>
-                    <div class="subject" id=<%= i %> draggable="true" ondragstart="drag(event)"><%=subjects[i].name%>
-                    </div> <% } %>
+                    <!--<%for(var i = 0; i < subjects.length; i++){%>
+                    <div class="subject" id=<%= subjects[i].id %> draggable="true" ondragstart="drag(event)"><%=subjects[i].name%>
+                    </div> <% } %> -->
                 </div>
                 <br><br><br>
                 <div id="options">
