--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -13,6 +13,7 @@
 
     <script src="scripts/algorithm.js"></script>
     <script src="scripts/shuffling.js"></script>
+    <script src="views/tests.js"></script>
 </head>
 <p hidden="true" id="jsondat"><%-JSON.stringify(subjects);%></p>
 <!--<script>$(document).ready(function(e){
