--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -33,7 +33,7 @@
     <div class="main">
         <div class="teamSetup">
             <div class="members">
-                <p style="font-size: large">Spawn Pool</p>
+                <p style="font-size: large">Subject Pool</p>
                 <div id="subjects" class="names" ondrop="drop(event)" ondragover="allowDrop(event)">
                     <!--<%for(var i = 0; i < subjects.length; i++){%>
                     <div class="subject" id=<%= subjects[i].id %> draggable="true" ondragstart="drag(event)"><%=subjects[i].name%>
