--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -49,7 +49,7 @@
             </div>
 
             <div class="shuffling_selection">
-                <p style="font-size: large">Shuffling Method</p>
+                <p id="shuffleHeading" style="font-size: large">Shuffling Method</p>
                 <button name="Randomize" id="randomize">Randomize</button><br><br>
                 <button name="Shuffle By" id="shuffle">Shuffle Teams By</button><br>
 
