--- a/src/views/signUp.html
+++ b/src/views/signUp.html
@@ -213,52 +213,22 @@
         <div class="container">
         <div class="jumbotron">
             <h1>Welcome to STORM</h1>
-            <p>Project STORM is a web based optimization application. Designed to shuffle subjects into groups, based on their attributes, as the user requires. </p>
-            <br>
-            <div class="container-fluid">
-                <div class="vid">
-            <video poster="vid.jpg" width="640" height="480" controls>
-                <source src="movie.mp4" type="video/mp4">
-                There will be a video of STORM being used.
-                </video>
-                <br>
-                <a href="/demo"><button class="btn btn-default" >Try it yourself</button></a>
-            </div>
-            <div class="signup">
-            <p class="signHeadings">Don't have an account?<br>Sign up here.</p>
-            <form id="signUpForm">
-                <div class="form-group">Name:<input class="form-control" name="name" type="text" required/></div>
-                    <div class="form-group">Username:<input class="form-control" name="username" type="text" required/></div>
-                        <div class="form-group">Email:<input class="form-control" name="email" type="email" required/></div>
-                            <div class="form-group">Password:<input class="form-control" name="password" type="password" required/></div>
+                <p class="signHeadings">Don't have an account?<br>Sign up here.</p>
+                <form id="signUpForm">
+                            Name:<input class="form-control" name="name" type="text" required/>
+                            Username:<input class="form-control" name="username" type="text" required/>
+                            Email:<input class="form-control" name="email" type="email" required/>
+                            Password:<input class="form-control" name="password" type="password" required/></td>
 
-                                <div class="form-group">Retype Password:<input class="form-control" name="confirm" type="password" required/></div>
-                <input class="btn btn-default"  type="submit" value="Sign Up"/>
-            </form>
-            </div>
-            </div>
-        </div>
+                            Retype Password:<input class="form-control" name="confirm" type="password" required/></td>
+                            <input class="btn btn-default"  type="submit" value="Sign Up"/>
+                </form>
         </div>
         </div>
 
     <div class="PlaceHolder">
 
     </div>
-
-        <footer class="footer">
-            <div class="footerMenu">
-                <table id="tableMenu">
-                    <tr id="tableMenu">
-                        <th id="tableMenu"><input id="homeButton" type="text" value="Home"
-                                                  onclick="window.location='/';" /></th>
-                        <th id="tableMenu"><input id="aboutButton" type="text" value="About"
-                                                  onclick="window.location='/about';" /></th>
-                        <th id="tableMenu"><input id="contactButton" type="text" value="Contact Us"
-                                                  onclick="window.location='/contact';" /></th>
-                    </tr>
-                </table>
-            </div>
-        </footer>
 </div>
 <div id="errorDialog"></div>
 </body>
